Fix for command line training. Train from arff and delete arff on exit.